extract all images and make a 3d model

--- a/tryclothes/templates/profile.html
+++ b/tryclothes/templates/profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - 3D Virtual Try-On</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -127,6 +128,7 @@
 <body>
 
     <div class="container">
+        <a href="{% url 'upload_image' %}" style="text-decoration: none;"> <i class="fa-solid fa-arrow-left m-2"></i> Go Back</a>
         <h1>🎽 3D Virtual Try-On - Profile</h1>
 
         {% if user.profile_picture %}
